dev:change: No results page now follows design of main results mockups and has more search suggestions. Also main search mockups now have filter sidebar

--- a/libs/jade/dev/search/results-adviser-page-2.jade
+++ b/libs/jade/dev/search/results-adviser-page-2.jade
@@ -11,7 +11,8 @@ block breadcrumbs
 		{title: "Home", href: dir + "index.html"},
 		{title: "Search"}])
 
-block script
+block sidebar
+	include /jade/dev/search/sidebar-search.jade
 
 block content
 	.flex-row
@@ -102,7 +103,7 @@ block content
 				li.pagination
 					#[a.blocklink(href="") Next 10 results for 'overpayment of benefits']
 				li.pagination
-					#[a.blocklink.blocklinks--back(href="/dev/search/results-adviser.html") Previous results]
+					#[a.blocklink.blocklinks--back(href="results-adviser.html") Previous results]
 
 				li.related-results
 					strong Related searches
