--- a/libs/jade/dev/search/results-public.jade
+++ b/libs/jade/dev/search/results-public.jade
@@ -2,7 +2,6 @@ block settings
 	- var mockup = true
 	- var sidebar = true
 	- var dir = "../../"
-	//- var sidebar = true
 
 extends /jade/templates/template.jade
 
@@ -10,9 +9,10 @@ block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: dir + "index.html"},
 		{title: "Search"}])
-
-block script
-
+	
+block sidebar
+	include /jade/dev/search/sidebar-search.jade
+	
 block content
 	.flex-row
 		.col-12
@@ -63,9 +63,9 @@ block content
 						li #[a Children and young people]
 
 				li.pagination
-					#[a.blocklink(href="/dev/search/results-public-page-2.html") 84 more results for 'Do I qualify for benefits in the UK']
+					#[a.blocklink(href="results-public-page-2.html") 84 more results for 'Do I qualify for benefits in the UK']
 
-				li.related-results
+				//- li.related-results
 					strong Related searches
 					p #[a Universal Credit],&nbsp;&nbsp;#[a Housing Benefit]
 
