dev:add: search sidebar to no results page

--- a/libs/jade/dev/search/search-no-results.jade
+++ b/libs/jade/dev/search/search-no-results.jade
@@ -10,6 +10,9 @@ block breadcrumbs
 		{title: "Home", href: dir + "index.html"},
 		{title: "Search"}])
 
+block sidebar
+	include /jade/dev/search/sidebar-search.jade
+
 block content
 	.flex-row
 		.col-12
