dev:change: advisernet notice copy change and added light blue border to bottom

--- a/libs/jade/dev/advisernet/advisernet-notice.jade
+++ b/libs/jade/dev/advisernet/advisernet-notice.jade
@@ -12,7 +12,7 @@ block section-notice
 		.section-notice__content
 			p
 				span.badge ADVISERNET
-				| You are currently viewing AdviserNet. #[a(href="https://www.citizensadvice.org.uk") Follow this link for the public website].
+				| You are currently viewing AdviserNet. #[a(href="https://www.citizensadvice.org.uk") Visit the public website].
 
 block breadcrumbs
 	+breadcrumbs([
