--- a/libs/styles/dev/theme/advisernet-notice.less
+++ b/libs/styles/dev/theme/advisernet-notice.less
@@ -12,6 +12,7 @@
     background-color: @inventive-teal-lighter;
     .section-notice__content {
         background-color: @inventive-teal-lighter;
+        border-bottom: 1px solid @inventive-teal-lighter;
             p {
                 line-height: 1.9;
                 }
