dev:change: added js error validtion to UC postcode checker

--- a/libs/jade/dev/universal-credit/uc-postcode-checker.jade
+++ b/libs/jade/dev/universal-credit/uc-postcode-checker.jade
@@ -1,4 +1,5 @@
 block settings
+	- var mockup = true
 	- var title = "Check if you can claim Universal Credit"
 	- var sidebar = true
 	- var toolbars = true
