dev:add: search no results page for adviser

--- a/libs/jade/dev/search/search-no-results-adviser.jade
+++ b/libs/jade/dev/search/search-no-results-adviser.jade
@@ -22,8 +22,7 @@ block content
 				.field-group.field-group--buttons
 					input#field(type="search" value="greivancess")
 					button.btn Search
-			p If you still can’t find what you need, #[a(href="https://www.citizensadvice.org.uk/about-us/how-we-provide-advice/advice/") find out how else you can get advice - whether online, by phone or in person].
-	
+			p Get more precise search results when searching for a phrase by putting quotation marks / double inverted commas ("") around the phrase, e.g. a search for "maternity pay"
 	.flex-row
 		.col-12
 			#[a.blocklink Let us know if you had problems with your search]
