--- a/libs/jade/dev/search/results-adviser-page-2.jade
+++ b/libs/jade/dev/search/results-adviser-page-2.jade
@@ -105,7 +105,7 @@ block content
 				li.pagination
 					#[a.blocklink.blocklinks--back(href="results-adviser.html") Previous results]
 
-				li.related-results
+				// li.related-results
 					strong Related searches
 					p #[a Universal Credit],&nbsp;&nbsp;#[a Housing Benefit]
 
