--- a/libs/jade/dev/search/results-public-page-2.jade
+++ b/libs/jade/dev/search/results-public-page-2.jade
@@ -88,7 +88,7 @@ block content
 				li.pagination
 					#[a.blocklink.blocklinks--back(href="results-public.html") Previous results]
 
-				li.related-results
+				// li.related-results
 					strong Related searches
 					p #[a Universal Credit],&nbsp;&nbsp;#[a Housing Benefit]
 
