dev:change copy for universal credit amended

--- a/libs/jade/dev/universal-credit/uc-results-full.jade
+++ b/libs/jade/dev/universal-credit/uc-results-full.jade
@@ -1,8 +1,8 @@
 block settings
 	- var mockup = true
-	- var title = "Full service"
-	- var sidebar = true
-	- var toolbars = true
+	//- var title = "Full service"
+	//- var sidebar = true
+	//- var toolbars = true
 	- var dir = "../../"
 
 extends /jade/templates/template.jade
@@ -19,15 +19,23 @@ block sidebar
 block content
 	.articleContent
 		div
-			p Anyone who meets certain conditions can make a new claim for Universal Credit in your area.
 
-			p To get Universal Credit you must:
-
+			p You can make a new claim for Universal Credit if you meet these conditions. You must:
+			
 			ul
 				li be aged 18 or over
 				li be below State Pension age
 				li not have savings over £16,000
 				li not be in full time education or training
-			p If you live with your partner you’ll need to make a joint claim. Your partner’s income and savings will be taken into account, even if they aren’t eligible for Universal Credit.
+			
+			p If you live with your partner you’ll need to make a joint claim.
+			
+			p You can’t make a new claim for benefits Universal Credit is replacing.
 
-			p You can’t make a new claim for benefits Universal Credit is replacing in your area. If you’re already getting any of these benefits, you’ll be moved onto Universal Credit some time in 2019.
+			h2 If you’re getting benefits Universal Credit replaces
+
+			p If your circumstances stay the same, it’s likely you’ll be moved onto Universal Credit some time in 2019.
+
+			p If you have a change of circumstances, for example you get a new job or move home, you might have to make a new claim for Universal Credit.
+
+			p You should get advice from your local Citizens Advice before reporting a change of circumstances or making a claim for Universal Credit. An adviser can help you prepare for getting Universal Credit and give you budgeting advice.
