--- a/libs/jade/dev/universal-credit/uc-results-live.jade
+++ b/libs/jade/dev/universal-credit/uc-results-live.jade
@@ -1,8 +1,8 @@
 block settings
 	- var mockup = true
-	- var title = "Live service"
-	- var sidebar = true
-	- var toolbars = true
+	//- var title = "Live service"
+	//- var sidebar = true
+	//- var toolbars = true
 	- var dir = "../../"
 
 extends /jade/templates/template.jade
@@ -19,23 +19,41 @@ block sidebar
 block content
 	.articleContent
 		div
-			p You can apply for Universal Credit in your area if you’re single and meet certain other conditions.
-
-			h2 Age
-
-			p You must:
+			p You can apply for Universal Credit in your area if you’re:
 
 			ul
-				li be aged 18 or over
-				li be below State Pension age
+				li single
+				li fit for work
+				li on a low income or looking for work
+				li not responsible for any children
 
-			h2 Work
+			p You’ll also have to meet other conditions - it can be complicated to work out if you’re eligible just by reading all the small print. You should ask your local Jobcentre for advice or call the Universal Credit helpline and explain your personal circumstances.
 
-			p You must not:
+			p
+				strong Universal Credit helpline<br />
+				| Telephone: 0345 600 0723<br />
+				| Textphone: 0345 600 0743<br />
+				| Monday to Friday, 8am to 6pm<br />
 
-			ul
-				li not have savings over £6,000
-				li not be in full time education or training
-				li not have responsibility for a child
 
-			p If you’re in a couple or have a family and satisfy these conditions, you should #[a(href="https://www.gov.uk/guidance/jobcentres-where-you-can-claim-universal-credit") check if you live in an area where you can claim].
+			p Calls can cost up to 9p a minute from a landline, or between 3p and 55p a minute from a mobile (your phone supplier can tell you how much you’ll pay). Calling should be free from a mobile if you have landline calls included in your contract. If you want, you can call and ask them to call you back.
+
+			h2 If you’re already claiming benefits
+
+			p If you’re already getting any of the benefits Universal Credit replaces and your circumstances stay the same, it’s likely you’ll be moved onto Universal Credit some time in 2019.
+
+			p If you have a change of circumstances, for example you move home or get a new job, you might have to make a new claim for Universal Credit if you meet certain conditions.
+
+			h2 If you’re claiming benefits for the first time
+
+			p You’ll have to claim Universal Credit if you meet the conditions for claiming it. You can still claim benefits Universal Credit is replacing if you don’t meet the conditions.
+
+			h2 If you live with a partner or have children
+
+			p You should check if you can claim Universal Credit in your area on the GOV.UK website.
+
+			p You’ll also have to meet other conditions to make a claim.
+
+			h2 Get help
+
+			You should get advice from your local Citizens Advice before reporting a change of circumstances or making a claim for Universal Credit. An adviser can help you prepare for getting Universal Credit and give you budgeting advice.
