dev:change: minor design changes in advisernet bar and search results public page

--- a/libs/jade/dev/advisernet/advisernet-notice.jade
+++ b/libs/jade/dev/advisernet/advisernet-notice.jade
@@ -12,7 +12,7 @@ block section-notice
 		.section-notice__content
 			p
 				span.badge ADVISERNET
-				| You are currently viewing AdviserNet. #[a(href="https://www.citizensadvice.org.uk") Visit the public website].
+				| You're currently viewing AdviserNet. #[a(href="https://www.citizensadvice.org.uk") Visit the public website].
 
 block breadcrumbs
 	+breadcrumbs([
@@ -35,6 +35,7 @@ block content
 			p Closed on bank holidays
 			p Calls to the helpline cost up to 9p per minute from a landline. If you're calling from a mobile, it'll cost between 3p and 40p per minute - if you have inclusive minutes, it's the same as calling a landline.
 			p An adviser will answer your call as soon as possible, usually within a few minutes. Once you're speaking to an adviser your call should take an average of 8 to 10 minutes.
+
 
 			h2 Use the online form
 			p You can also contact the consumer service online. There’s a different way of getting in touch depending on whether it’s about:
