--- a/libs/jade/dev/search/results-public.jade
+++ b/libs/jade/dev/search/results-public.jade
@@ -2,6 +2,7 @@ block settings
 	- var mockup = true
 	- var sidebar = true
 	- var dir = "../../"
+	- var cookiemonster = true
 
 extends /jade/templates/template.jade
 
