dev:change:Removed the brand speech-line brand asset from index.jade as deprecated

--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -117,5 +117,6 @@ block content
 						a(href="branding/brand-icons.html") Brand icons
 					//li
 						a(href="branding/cards.html") Cards
-					li
+					//li
 						a(href="branding/speech-line.html") Speech line
+						Brand asset not in use since mid-2016
