Fixed errors to two swatches hex and rgb values

--- a/libs/styles/docs/swatches.less
+++ b/libs/styles/docs/swatches.less
@@ -91,7 +91,7 @@
     &.swatch--beta--red {
         background-color: @red;
         color: @white;
-        .print-swatch(@heritage-yellow-lighter);
+        .print-swatch(@red);
     }
     &.swatch--beta--red-light {
         background-color: @red-light;
@@ -136,7 +136,7 @@
     &.swatch--beta--blue {
         background-color: @blue;
         color: @white;
-        .print-swatch(@heritage-yellow-lighter);
+        .print-swatch(@blue);
     }
     &.swatch--beta--blue-light {
         background-color: @blue-light;
