--- a/libs/jade/dev/search/sidebar-search.jade
+++ b/libs/jade/dev/search/sidebar-search.jade
@@ -1,6 +1,6 @@
 // Sidebar for search pages
 
-.main-content__sidebar
+.section-nav
 	.form
 		.fieldset
 			label(for="searchFilter") Show results for:
@@ -9,3 +9,7 @@
 					option(value="0") Advice 
 					option(value="1") Research and campaigns
 					option(value="2") Everything
+	p #[a(href="#") A to Z of advice]
+	p #[a(href="#") Search for your local Citizens Advice]	
+	p #[a(href="#") Browse our campaign pages ]
+	p #[a(href="#") Browse our research pages ]
