--- a/libs/styles/theme/search-results.less
+++ b/libs/styles/theme/search-results.less
@@ -93,7 +93,7 @@
         }
     }
     .search-results__input {
-        padding: @box-spacing-vertical 0 0 0;
+        //padding: @box-spacing-vertical/2 0 @box-spacing-vertical;
         border: none;
     }
     .pagination {
