--- a/libs/jade/dev/search/sidebar-search.jade
+++ b/libs/jade/dev/search/sidebar-search.jade
@@ -1,15 +1,24 @@
 // Sidebar for search pages
 
-.section-nav
-	.form
-		.fieldset
-			label(for="searchFilter") Show results for:
+.side-nav-beta.search-sidebar
+	.search-sidebar--filter
+		label(for="exampleSelect1") Show results for:
+		fieldset
 			.dropdown
 				select(id="searchFilter")
 					option(value="0") Advice 
 					option(value="1") Research and campaigns
 					option(value="2") Everything
-	p #[a(href="#") A to Z of advice]
-	p #[a(href="#") Search for your local Citizens Advice]	
-	p #[a(href="#") Browse our campaign pages ]
-	p #[a(href="#") Browse our research pages ]
+
+	.search-sidebar--navigation
+		label Useful links
+		fieldset
+			ul
+				li
+					a(href="#") A to Z of advice
+				li
+					a(href="#") Search for your local Citizens Advice
+				li
+					a(href="#") Browse our campaign pages
+				li
+					a(href="#") Browse our research pages
