dev:change: title smaller for single field search results page to move results further up page and focus more on results

--- a/libs/jade/dev/search/results-public-single-field.jade
+++ b/libs/jade/dev/search/results-public-single-field.jade
@@ -1,7 +1,7 @@
 block settings
 	- var mockup = true
 	- var sidebar = true
-	- var title = "Search results"
+	//- var title = "Search results"
 	- var dir = "../../"
 
 extends /jade/templates/template.jade
@@ -23,6 +23,7 @@ block content
 							input#field(type="search", placeholder="Search again", value="benefits")
 							button.btn.search-button-icon Search
 			//-.search-title Showing results for #[strong Do I qualify for benefits in the UK]
+			p Results for #[strong benefits]
 			.term-suggestion Search instead for #[a bnefits]
 			ul.search-results
 
