--- a/libs/styles/theme/search-results.less
+++ b/libs/styles/theme/search-results.less
@@ -96,7 +96,7 @@
             padding: 0;
             margin: 0;
             margin-top: .2rem;
-            white-space: nowrap;
+            white-space: normal;
             overflow: ellipsis;
             li {
                 overflow: ellipsis;
