--- a/libs/styles/modules/header.less
+++ b/libs/styles/modules/header.less
@@ -148,6 +148,10 @@ input.main-header__search__input {
     .ie8 & {
         padding: .3em .2em;
     }
+
+    .advisernet & {
+        width: 23em;
+    }
 }
 
 .main-header__search__submit {
