--- a/libs/styles/modules/share-bar.less
+++ b/libs/styles/modules/share-bar.less
@@ -96,6 +96,10 @@ html[data-useragent*='Mobi'] .a-social-whatsapp {
     // Used to wrap
     position: relative;
     background-color: @white;
+
+    .advisernet {
+        background-color: #F2F6F9;
+    }
 }
 
 // Fixes an issue with spacing when the section notice is present
