dev:add: created Advisernet search results page

--- a/libs/jade/dev/search/sidebar-search-advisernet.jade
+++ b/libs/jade/dev/search/sidebar-search-advisernet.jade
@@ -1,11 +1,11 @@
 // Sidebar for search pages
 
 .side-nav-beta.search-sidebar
-	.search-sidebar--navigation
-		label Useful links
-		fieldset
-			ul
-				li
-					a(href="#") A to Z of advice
-				li
-					a(href="#") Browse our news stories
+	.search-sidebar--advisernet
+			label Navigation tools
+			fieldset
+				ul
+					li
+						a(href="#") A to Z of advice
+					li
+						a(href="#") Browse our news stories
