--- a/libs/jade/dev/search/results-advisernet.jade
+++ b/libs/jade/dev/search/results-advisernet.jade
@@ -1,7 +1,7 @@
 block settings
-	- var mockup = true
+	- var advisernet = true
 	- var sidebar = true
-	- var title = "Search results for"
+	//- var title = "Search results for"
 	- var dir = "../../"
 
 extends /jade/templates/template.jade
@@ -9,7 +9,7 @@ extends /jade/templates/template.jade
 block breadcrumbs
 	+breadcrumbs([
 		{title: "England"},
-		{title: "Home", href: dir + "index.html"},
+		{title: "Navigation tools"},
 		{title: "Search"}])
 	
 block sidebar
@@ -18,21 +18,26 @@ block sidebar
 block content
 	.flex-row
 		.col-12
+			h1.search-title Search results for
 			.search-results__input
 					fieldset
 						.field-group.field-group--buttons
 							input#field(type="search", placeholder="Search again", value="benefits")
 							button.btn.search-button-icon Search
-			//.search-title Showing results for #[strong Do I qualify for benefits in the UK]
-			.term-suggestion Search instead for #[a bnefits]
+			//-.search-title Showing results for #[strong Do I qualify for benefits in the UK]
+			//-.term-suggestion Search instead for #[a bnefits]
 			ul.search-results
 
 				li
 					.heading
-						a Benefits
-					.description Overview and content list for #[strong benefits].
-					//- ul.section
+						a Backdating benefits
+					.description Information on backdating means-tested and non-means-tested benefits including late claims, specified circumstances and good cause, exceptions to time limits, and maximising benefit arrears when challenging a decision.
+					ul.section
+						li In:
+						li #[a Advisernet]
 						li #[a Benefits]
+						li #[a Benefits administration]
+						li #[a Rates, calculations and payments]
 					//-.adviser-categories
 						ul(style="margin:0")
 							li #[a Benefits fact sheets]
@@ -42,40 +47,52 @@ block content
 
 				li
 					.heading
-						a Benefits advice in BSL
-					.description Find out about #[strong benefits] you may be able to get, how to claim them and the help you can get from a Citizens Advice Bureau. Information in British Sign Language (BSL).
+						a Benefits and fraud
+					.description Explains benefit fraud, how benefit authorities investigate fraud and the process of prosecuting a claimant for benefit fraud. It also describes what may happen to a claimant's benefit during and after a benefit fraud investigation.
 					ul.section
+						li In:
+						li #[a Advisernet]
 						li #[a Benefits]
+						li #[a Benefits administration]
+						li #[a Benefits administration, fraud and appeals]
 
 				li
 					.heading
-						a Benefits changes timeline
-					.description Timeline showing which #[strong benefits] are changing and when.
+						a Complaints about benefits
+					.description Information on making a complaint about benefits covering when to complain, what can be achieved, who to complain to, complaints about the Department for Work and Pensions, and using the ombudsman.
 					ul.section
+						li In:
+						li #[a Advisernet]
 						li #[a Benefits]
-						li #[a Changes to Welfare benefits]
+						li #[a Benefits administration]
+						li #[a Benefits administration, fraud and appeals]
 
 				li
 					.heading
-						a Young people and benefits
-					.description Information on #[strong benefits] for young people between the ages of 14 and 18.
+						a Benefits
+					//-.description Information on #[strong Benefits] for people over 60 including retirement pension, pension credit, winter fuel payments and Christmas bonus.
 					ul.section
-						li #[a Benefits]
-						li #[a Children and young people]
+						li In:
+						li #[a AdviserNet]
 
 				li
 					.heading
-						a Benefits for older people
-					.description Information on #[strong Benefits] for people over 60 including retirement pension, pension credit, winter fuel payments and Christmas bonus.
+						a Benefits and prisoners
+					.description Information explaining how benefits are affected by being on remand, in prison or on temporary release. It covers benefits for looking after the children of prisoners and benefits on release from prison.
 					ul.section
-						li #[a Benefits]
-						li #[a Older people]
+						li In:
+						li #[a Advisernet]
+						li #[a Law and courts]
+						li #[a Prisons and prisoners]
+						li #[a Benefits and prisoners]
 
 				li
 					.heading
 						a Disability discrimination and welfare benefits
-					.description Explains how service providers must not discriminate against you, when you are claiming or receiving #[strong benefits].
+					.description Explains how service providers must not discriminate against you, when you are claiming or receiving benefits.
 					ul.section
+						li In:
+						li #[a Advisernet]
 						li #[a Consumer]
 						li #[a Discrimination in goods and services]
 						li #[a Services provided by a public authority]
@@ -83,36 +100,48 @@ block content
 
 				li
 					.heading
-						a Croatian nationals - claiming benefits
-					.description Rights of Croatian nationals and the habitual residence test.
+						a Taxation of benefits in kind
+					.description Information on benefits in kind, also known as fringe benefits or perks, covering tax free benefits, how taxable benefits in kind are valued, common benefits in kind, how the tax is declared and national insurance and benefits in kind.
 					ul.section
-						li #[a Benefits]
-						li #[a Coming from abroad and claiming benefits]
-						li #[a EEA nationals]
+						li In:
+						li #[a Advisernet]
+						li #[a Debt and money]
+						li #[a Tax]
+						li #[a Income tax]
+						li #[a Allowances and reliefs]
 
 				li
 					.heading
-						a National insurance – contributions and benefits
-					.description Information on national insurance contributions including classes of contributions, contribution conditions for #[strong benefits] and how to get a national insurance number.
+						a Benefits and tax credits overpayments
+					.description Explains the circumstances in which benefits and tax credits overpayments count as qualifying debts for a debt relief order.
 					ul.section
-						li #[a Benefits]
-						li #[a Benefits - introduction]
+						li In:
+						li #[a Advisernet]
+						li #[a Resources]
+						li #[a Caseworker tools]
+						li #[a Debt relief order toolkit]
+						li #[a Which debts are covered by a debt relief order]
 
 				li
 					.heading
-						a Benefits for families and children
-					.description #[strong Benefits] for pregnant women and parents, including maternity allowance, maternity grants, child benefit and child trust fund.
+						a CPAG Welfare Benefits and Tax Credits Handbook
+					.description The CPAG welfare benefits and tax credits handbook is a definitive guide to all welfare benefits and tax credits. It explains claims, decisions, calculations, overpayments, appeals and how to challenge them, how to claim from the social fund, and national insurance contributions.
 					ul.section
-						li #[a Benefits]
-						li #[a Children and young people]
+						li In:
+						li #[a Advisernet]
+						li #[a Resources]
+						li #[a Reference books]
 				
 				li
 					.heading
-						a Benefits for people in work
-					.description Information on #[strong benefits] and other help you may be entitled to.
+						a Benefits for industrial injury and disease
+					.description Deals with social security benefits payable to a client who has had an accident at work or who has contracted an industrial disease. Explains what a client should do following an accident, describes the industrial injuries scheme, disablement benefit and constant attendance allowance.
 					ul.section
+						li In:
+						li #[a Advisernet]
 						li #[a Benefits]
-						li #[a  In work or looking for work]
+						li #[a Other benefits]
+						li #[a Industrial injuries benefits]
 
 			.pagination
 					ul
@@ -120,6 +149,9 @@ block content
 							span 1
 						li #[a(href="#") 2]
 						li #[a(href="#") 3]
+						li #[a(href="#") 4]
+						li #[a(href="#") 4]
+						li #[a(href="#") 5]
 						li #[a(href="#") Next]
 						li #[a(href="#") Last]
 
