--- a/libs/styles/theme/search-results.less
+++ b/libs/styles/theme/search-results.less
@@ -53,11 +53,12 @@
             &:hover,
             &:active,
             &:visited {
-                background-color: @heritage-blue-lighter;
+                background-color: @heritage-blue-lightest;
                 //border-bottom: 2px solid @heritage-yellow;
             }
         }
     }
+
 }
 
 .search-sidebar--filter {
@@ -67,6 +68,12 @@
     margin-bottom: 1.5rem;
 }
 
+.search-sidebar--advisernet {
+    .well;
+    border-top: 8px #99b7c4 solid;
+    background-color: @white;
+    margin-bottom: 1.5rem;
+}
 
 .search-results {
     padding: 0;
@@ -76,12 +83,13 @@
         padding: 1rem 0;
         border-top: @gray-7 1px solid;
         .heading {
-            color: @blue;
+            color: @heritage-blue;
             font-size: @font-size-medium;
             font-weight: @font-weight-bold;
             line-height: 1.4;
             //margin-bottom: 1/1.2*.25em;
                 a {
+                    color: @heritage-blue;
                     border-bottom: none;
                 }
         }
@@ -114,7 +122,7 @@
                     content: "";
                 }
                 a {
-                    color: @blue;
+                    color: @heritage-blue;
                     border: none;
                 }
             }
@@ -178,9 +186,10 @@
 }
 
 .search-title {
-    font-size: @font-size-medium;
-    margin-top: -1rem;
-    margin-bottom: 1.5rem;
+    font-size: @font-size-large;
+    font-weight: @font-weight-bold;
+    margin-top: -0.8rem;
+    margin-bottom: 0.6rem;
     color: @heritage-blue;
 }
 
