dev:add: created AdviserNet search typo correction page and no results page mockups

--- a/libs/jade/dev/search/results-advisernet-typo.jade
+++ b/libs/jade/dev/search/results-advisernet-typo.jade
@@ -19,13 +19,15 @@ block content
 	.flex-row
 		.col-12
 			h1.search-title Search
+			//-.search-title Showing results for #[strong benefits]
+			//- .term-suggestion Search instead for #[a bnefits]
 			.search-results__input
 					fieldset
 						.field-group.field-group--buttons
-							input#field(type="search", placeholder="Search again", value="benefits")
+							input#field(type="search", placeholder="Search again", value="bnefits")
 							button.btn.search-button-icon Search
-			//-.search-title Showing results for #[strong Do I qualify for benefits in the UK]
-			//-.term-suggestion Search instead for #[a bnefits]
+			p Showing results for #[strong benefits]
+			p Search instead for #[a bnefits]
 			ul.search-results
 
 				li
