--- a/libs/jade/dev/search/search-no-results-advisernet.jade
+++ b/libs/jade/dev/search/search-no-results-advisernet.jade
@@ -25,4 +25,4 @@ block content
 			p Get more precise search results when searching for a phrase by putting quotation marks / double inverted commas ("") around the phrase, e.g. a search for "maternity pay"
 	.flex-row
 		.col-12
-			#[a.blocklink Let us know if you had problems with your search]
+			#[a.blocklink(href="https://www.research.net/r/SS2P73R?p={{p}}&u={{u}}" target="_blank") Let us know if you had problems with your search]
