--- a/libs/styles/theme/search-results.less
+++ b/libs/styles/theme/search-results.less
@@ -187,7 +187,7 @@
 
 .search-title {
     font-size: @font-size-large;
-    font-weight: @font-weight-bold;
+    font-weight: @font-weight-base;
     margin-top: -0.8rem;
     margin-bottom: 0.6rem;
     color: @heritage-blue;
